cabal-version:      2.4
name:               clutter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Clutter, Counter, IntCounter, TextCounter

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, primitive, hashable, compact, text >=2.0.1, text-short
    hs-source-dirs:   src
    default-language: Haskell2010

executable test
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: base, clutter, with-utf8, primitive, text
    default-language: Haskell2010
